--- a/netlify.toml
+++ b/netlify.toml
@@ -34,4 +34,5 @@ status = 302
 to = '/tutorials/'
 
 [build]
+command = 'cp style.css MenuBuilder.doccarchive/'
 publish = 'MenuBuilder.doccarchive/'
